# scriptorium

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  playwright.config.ts
crates/scriptorium-cli/: Cargo.toml
crates/scriptorium-cli/src/: dashboard.html  dashboard.rs  drain_install.rs  log_cmd.rs  main.rs  trace_cmd.rs
crates/scriptorium-cli/tests/: telemetry_e2e.rs
crates/scriptorium-core/: Cargo.toml
crates/scriptorium-core/migrations/: 001_telemetry_initial.sql  002_hook_events_compat.sql
crates/scriptorium-core/src/: bench.rs  bulk_ingest.rs  config.rs  consolidate.rs  doctor.rs  error.rs  extract.rs  git.rs  global_config.rs  hooks.rs  hooks_check.rs  hooks_store.rs  import_chat.rs  index.rs  ingest.rs  ingest_queue.rs  keychain.rs  learnings.rs  lib.rs  maintain.rs  query.rs  reindex.rs  schema.rs  setup.rs  skills.rs  suggest.rs  url_fetch.rs  watch.rs
crates/scriptorium-core/src/embed/: atomic.rs  chunk.rs  chunk_recursive.rs  chunk_semantic.rs  index.rs  mod.rs  store.rs  vector_index.rs
crates/scriptorium-core/src/eval/: context_precision.rs  faithfulness.rs  mod.rs
crates/scriptorium-core/src/lint/: broken_links.rs  fix.rs  frontmatter.rs  missing_tags.rs  mod.rs  orphans.rs  page_structure.rs  provenance.rs  stale.rs
crates/scriptorium-core/src/llm/: claude.rs  error.rs  gemini.rs  meridian.rs  mock.rs  mod.rs  ollama.rs  openai.rs  prompts.rs  retry.rs  usage.rs
crates/scriptorium-core/src/search/: dedup.rs  expansion.rs  fusion.rs  mod.rs  ppr.rs  rerank.rs
crates/scriptorium-core/src/social/: facebook.rs  mod.rs
crates/scriptorium-core/src/telemetry/: envelope.rs  migration.rs  mod.rs  payload.rs  propagation.rs  resource.rs  schema.rs  store.rs  tracing_layer.rs
crates/scriptorium-core/src/vault/: graph.rs  lock.rs  mod.rs  page.rs  patch.rs  stem.rs  tx.rs  wikilink.rs
crates/scriptorium-core/tests/: e2e.rs  live_claude.rs  live_gemini.rs
crates/scriptorium-core/tests/fixtures/sample-vault/: CLAUDE.md  index.md  log.md
crates/scriptorium-core/tests/fixtures/sample-vault/sources/articles/: sample.md
crates/scriptorium-core/tests/fixtures/sample-vault/wiki/concepts/: attention.md  transformers.md
crates/scriptorium-core/tests/fixtures/sample-vault/wiki/topics/: bert.md  orphan-note.md
crates/scriptorium-mcp/: Cargo.toml
crates/scriptorium-mcp/src/: lib.rs  server.rs  tools.rs
docs/: ARCHITECTURE.md
scripts/: gmail-batch-fetch.sh  gmail-bulk-download.sh  gmail-export.sh  gmail-fetch-batch.js  gmail-to-scriptorium.sh  inventory-hook-events-consumers.md  no-opentelemetry-sdk.sh  smoke-cli-telemetry.sh  sqlite3-smoke-test.sh
templates/: CLAUDE.md  benchmarks.json  config.toml  gitignore  index.md  log.md
templates/skills/: manifest.json
templates/skills/ingest/: SKILL.md
templates/skills/learn/: SKILL.md
templates/skills/maintain/: SKILL.md
templates/skills/query/: SKILL.md
templates/skills/review/: SKILL.md
tests/: hooks_e2e.sh
tests/dashboard-qa/: .gitignore  error-banner.spec.ts  full-smoke.spec.ts  global-setup.ts  global-teardown.ts  health-tab.spec.ts  loading-overlay.spec.ts  overview-labels.spec.ts  since-param.spec.ts  smoke.spec.ts  xss-safety.spec.ts
tests/fixtures/: auto-stash-input.json  classifier-input.json  health-check-input.json  notepad-ingest-input.json  nudge-input.json  recall-nudge-input.json  session-end-input.json  subagent-start-input.json  subagent-stop-input.json
