[package]
name = "scriptorium-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Scriptorium CLI binary"

[lints]
workspace = true

[features]
dashboard = ["dep:axum", "dep:tower", "dep:tower-http"]

[[bin]]
name = "scriptorium"
path = "src/main.rs"

[dependencies]
scriptorium-core.workspace = true
scriptorium-mcp = { path = "../scriptorium-mcp", version = "0.1.0" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true

# URL ingest pipeline lives in `scriptorium-core::url_fetch` now; the CLI
# only needs the helpers below to format paths and timestamps for output.
camino.workspace = true
chrono.workspace = true
indicatif.workspace = true

# Dashboard (feature-gated)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
