[package]
name = "scriptorium-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server for Scriptorium (stdio transport in v1)"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
scriptorium-core.workspace = true
tokio = { workspace = true, features = ["io-util", "io-std"] }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
camino.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
